--- a/src/index.scss
+++ b/src/index.scss
@@ -152,7 +152,7 @@
     padding: 0 10px 0 5px;
     color: white;
     transition: color 0.25s ease-in-out;
-    animation: rotateWord 21s linear infinite 0s;
+    animation: rotateWord 24s linear infinite 0s;
     &:nth-child(2) {
         animation-delay: 3s;
     }
@@ -171,13 +171,16 @@
     &:nth-child(7) {
         animation-delay: 18s;
     }
+    &:nth-child(8) {
+        animation-delay: 21s;
+    }
 }
 
 @keyframes rotateWord {
     0% {
         opacity: 0;
     }
-    2% {
+    0.5% {
         opacity: 0;
         transform: translateY(-2rem);
     }
